feat(api): add export for watched movies
